# kutter

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
src/: db.rs  main.rs  middlewares.rs
src/routes/: auth.rs  chat.rs  friend.rs  mod.rs
static/: 404.html  changelog.html  index.html  login.html  me.html  signup.html
static/js/: chat.js  home.js  index.js  login.js  signup.js
static/styles/: _themes.scss  _variables.scss  build.css  build.css.map  styles.scss
