[package]
name = "Kutter"
version = "0.2.0-beta.0"
edition = "2024"

[dependencies]
actix-web = '4.11.0'
serde = { version = "1.0.219", features = ["derive"] }
actix-web-actors = "4.3.0"
actix-ws = "0.3"
futures-util = "0.3.31"
actix-rt = "2.10.0"
actix-files = "0.6.6"
actix-cors = "0.7.1"
time = "0.3.41"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "macros",
] }
dotenv = "0.15"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "1.0"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
regex = "1.11.1"
lettre = "0.11.17"
rand = "0.9.1"
resend-rs = "0.15.0"
actix-multipart = "0.7.2"
sanitize-filename = "0.5.0"
